# ergowatch

./: .gitignore  CHANGELOG.md  LICENSE  README.md  build.sh  docker-compose-pg-upgrade.yml  docker-compose.example.yml  docker-compose.yml  readme_pg_upgrade.md
db/: Dockerfile  (+12 more)
ew/: Cargo.toml  Dockerfile  docker-compose-test.yml  justfile
ew/src/: config.rs  constants.rs  core.rs  framework.rs  lib.rs  main.rs  monitor.rs  units.rs  utils.rs  workers.rs
ew/src/core/: data.rs  ergo.rs  node.rs  store.rs  tracking.rs  types.rs
ew/src/core/ergo/: boxes.rs  ergo_tree.rs  parsing.rs  register.rs  votes.rs
ew/src/core/node/: api.rs  models.rs
ew/src/core/store/: addresses.rs  blocks.rs  boxes.rs  headers.rs  schema.rs  schema.sql  tokens.rs
ew/src/core/tracking/: cursor.rs  messages.rs  tracker.rs
ew/src/framework/: cursor.rs  event.rs  event_emission.rs  event_handling.rs  ew.sql  query_emission.rs  query_handling.rs  source.rs  store.rs  utils.rs  worker.rs  workflow.rs
ew/src/units/: sigmausd.rs
ew/src/units/sigmausd/: parsing.rs  store.rs  types.rs
ew/src/workers/: coingecko.rs  erg.rs  erg_diffs.rs  exchanges.rs  network.rs  sigmausd.rs  timestamps.rs  tokens.rs
ew/src/workers/coingecko/: service.rs  store.rs  types.rs
ew/src/workers/erg/: parsing.rs  store.rs  types.rs
ew/src/workers/erg_diffs/: parsing.rs  queries.rs  store.rs  types.rs
ew/src/workers/exchanges/: parsing.rs  store.rs  types.rs
ew/src/workers/network/: parsing.rs  store.rs  types.rs
ew/src/workers/sigmausd/: constants.rs  parsing.rs  store.rs  types.rs
ew/src/workers/timestamps/: parsing.rs  store.rs  types.rs
ew/src/workers/tokens/: parsing.rs  store.rs  types.rs
ew/tests/: test_node_mockup.rs  test_sigmausd.rs  test_tracker.rs  test_worker_coingecko.rs  test_worker_erg.rs  test_worker_erg_diffs.rs  test_worker_exchanges.rs  test_worker_network.rs  test_worker_sigmausd.rs  test_worker_timestamps.rs  test_worker_tokens.rs
ew/tests/coingecko/: mockup.rs  mod.rs
ew/tests/common/: blocks.rs  node_mockup.rs
ew/tests/common/blocks/: block_1.rs  block_2.rs  block_3.rs  block_4.rs  genesis.rs
ew/tests/db_utils/: mod.rs  test_db.rs
sigpy/: Cargo.toml  README.md  check.py  pyproject.toml
sigpy/src/: lib.rs
watcher/: .gitignore  Cargo.toml  Dockerfile  docker.toml
watcher/config/: default.toml
watcher/db/: _constraints.sql  constraints.sql  schema.sql
watcher/db/v0.1/: constraints_rev1.sql  schema_rev1.sql
watcher/db/v0.4/: constraints_rev1.0.sql  schema_rev1.0.sql
watcher/src/: cache.rs  coingecko.rs  constants.rs  db.rs  emission.rs  main.rs  parsing.rs  session.rs  settings.rs  sync.rs  types.rs
watcher/src/db/: addresses.rs  bal.rs  balances.rs  blocks.rs  cexs.rs  coingecko.rs  core.rs  metrics.rs  migrations.rs  mod.rs  repair.rs  unspent.rs  usp.rs
watcher/src/db/addresses/: erg.rs  erg_diffs.rs  tokens.rs  tokens_diffs.rs
watcher/src/db/bal/: erg.rs  erg_diff.rs  tokens.rs
watcher/src/db/balances/: erg.rs  erg_diffs.rs  tokens.rs  tokens_diffs.rs
watcher/src/db/cexs/: addresses.rs  deposit_addresses.rs  new_deposit_addresses.rs  processing_log.rs  repair.rs  supply.rs
watcher/src/db/core/: additional_registers.rs  addresses.rs  assets.rs  data_inputs.rs  extension.rs  genesis.rs  header.rs  headers.rs  inputs.rs  outputs.rs  registers.rs  tokens.rs  transactions.rs
watcher/src/db/metrics/: address_counts.rs  cexs.rs  ergusd.rs  heights.rs  supply_age.rs  supply_composition.rs  supply_distribution.rs  timestamps.rs  transactions.rs  utils.rs  utxos.rs  volume.rs
watcher/src/db/migrations/: mig_001.rs  mig_002.rs  mig_003.rs  mig_004.rs  mig_005.rs  mig_006.rs  mig_007.rs  mig_008.rs  mig_009.rs  mig_010.rs  mig_011.rs  mig_012.rs  mig_013.rs  mig_014.rs  mig_015.rs  mig_016.rs  mig_017.rs  mig_018.rs  mig_019.rs  mig_020.rs  mig_021.rs  mig_022.rs  mig_023.rs  mig_024.rs  mig_025.rs  mig_026.rs  mig_027.rs  mig_028.rs  mig_029.rs  mig_030.rs  mig_031.rs  mig_032.rs  mig_033.rs
watcher/src/db/unspent/: usp.rs
watcher/src/node/: api.rs  mod.rs  models.rs
watcher/src/parsing/: ergo_tree.rs  register.rs  sigma.rs  votes.rs
watcher/src/units/: balances.rs  core.rs  headers.rs  mod.rs  sigma.rs  unspent.rs
watcher/src/units/core/: additional_registers.rs  assets.rs  data_inputs.rs  genesis.rs  headers.rs  inputs.rs  outputs.rs  tokens.rs  transactions.rs
watcher/testbench/: README.md  api.py  blocks.py  fixtures.py  requirements.txt  setup.py  test_adr.py  test_adr_age.py  test_bal.py  test_bal_bootstrapping.py  test_bal_fork.py  test_bal_genesis.py  test_block_stats.py  test_bootstrapping.py  test_cex.py  test_core.py  test_core_block_600k.py  test_core_bootstrapped.py  test_core_genesis.py  test_core_rollback.py  test_core_token_minting_block.py  test_db_connection.py  test_db_flags.py  test_fixtures_api.py  test_fixtures_api_format.py  test_fixtures_db.py  test_fork.py  test_index_issue.py  test_migrations.py  test_mock_api.py  test_mtr.py  test_mtr_address_counts.py  test_mtr_cex.py  test_mtr_ergusd.py  test_mtr_supply_age.py  test_mtr_supply_composition.py  test_mtr_supply_distribution.py  test_node_data.py  test_resume_repair_option.py  test_unspent.py  (+1 more)
watcher/testbench/fixtures/: __init__.py  addresses.py  api.py  api2.py  blocks.py  config.py  db.py  registers.py  syntax.py
watcher/testbench/fixtures/blocks/: __init__.py  balances.py  balances_fork.py  block_600k.py  bootstrap.py  core_block.py  fork.py  genesis_block.py  token_minting_block.py
watcher/testbench/fixtures/db/: __init__.py  db.py  sql.py
watcher/testbench/test_core/: test_core.py
watcher/testbench/test_fixtures/: test_address_catalogue.py  test_api.py  test_db.py  test_parsing.py
(+176 files in other folders)
