[package]
name = "ew"
version = "0.1.0"
edition = "2021"

[features]
# Include test utils by default to make dev/testig easier.
# Release with the `--no-default-features` flag to override.
test-utilities = ["dep:rand"]
default = ["test-utilities"]

[dependencies]
async-trait = "0.1.71"
base16 = "0.2.1"
ergotree-ir = "0.22.0"
rand = { version = "0.8.5", optional = true }
reqwest = { version = "0.11", features = ["json"] }
rust_decimal = { version = "1.30", features = ["db-postgres"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7.8", features = [
    "with-serde_json-1",
    "with-time-0_3",
] }
time = "0.3.23"
tracing = "0.1"
tracing-subscriber = "0.3"
[dev-dependencies]
axum = { version = "0.6", features = ["query"] }
pretty_assertions = "1.3.0"
time = { version = "0.3.23", features = ["macros"] }
