[package]
name = "ew"
version = "0.1.0"
edition = "2021"

[features]
# Include test utils by default to make dev/testig easier.
# Release with the `--no-default-features` flag to override.
test-utilities = ["dep:rand"]
default = ["test-utilities"]

[dependencies]
axum = { version = "0.6", features = ["json"] }
async-trait = "0.1.71"
base16 = "0.2.1"
ergotree-ir = "0.22.0"
itertools = "0.11.0"
lru = "0.11.0"
postgres-from-row = "0.5.2"
postgres-types = { version = "0.2.5", features = ["derive"] }
rand = { version = "0.8.5", optional = true }
reqwest = { version = "0.11", features = ["json"] }
rust_decimal = { version = "1.30", features = ["db-postgres"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7.8", features = [
    "with-serde_json-1",
    "with-time-0_3",
] }
time = "0.3.23"
tracing = { version = "0.1", features = [
    "max_level_trace",
    "release_max_level_debug",
] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
axum = { version = "0.6", features = ["query"] }
pretty_assertions = "1.3.0"
time = { version = "0.3.23", features = ["macros"] }
