[package]
name = "sigpy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "sigpy"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.16.5", features = ["extension-module"] }
serde_json = "1.0"
ergotree-ir = "0.17.0"
ergo-chain-types = "0.4.0"
base16 = "0.2.1"
