[package]
name = "watcher"
version = "0.4.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = {version = "0.11", features = ["toml"]}
env_logger = "0.9.0"
log = "0.4.14"
postgres = {version="0.19", features=["with-serde_json-1"]}
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ergotree-ir = "0.17.0"
base16 = "0.2.1"
anyhow = "1.0.53"
clap = {version="3.0.13", features=["derive", "cargo"]}

[dev-dependencies]
pretty_assertions = "0.7.2"
